# lkeep

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml
.gitea/workflows/: lint.yaml
.github/workflows/: lint.yaml
lkeep/: main.py
lkeep/apps/: __init__.py
lkeep/apps/auth/: depends.py  handlers.py  managers.py  named_tuples.py  routes.py  schemas.py  services.py
lkeep/core/: celery_config.py  settings.py
lkeep/core/core_dependency/: db_dependency.py
lkeep/database/mixins/: timestamp_mixins.py
lkeep/database/models/: base.py
src/lkeep/: main.py
src/lkeep/apps/: __init__.py
src/lkeep/apps/admin/: admin_auth.py  admin_base.py
src/lkeep/apps/admin/views/: link_view.py  user_view.py
src/lkeep/apps/auth/: managers.py  schemas.py  services.py  tasks.py  utils.py
src/lkeep/apps/links/: managers.py  routes.py  schemas.py  services.py
src/lkeep/apps/profile/: managers.py  routes.py  schemas.py  services.py
src/lkeep/core/: __init__.py  settings.py
src/lkeep/core/core_dependency/: db_dependency.py  redis_dependency.py
src/lkeep/database/alembic/: env.py
src/lkeep/database/alembic/versions/: 2025_01_10_1706-ccf7560dd457_create_user_table.py  2025_09_24_1430-d93cd9da97e5_links_model.py
src/lkeep/database/mixins/: id_mixins.py
src/lkeep/database/models/: __init__.py  links.py  user.py
templates/: confirmation_email.html
