[project]
name = "lkeep"
version = "0.1.0"
description = ""
authors = [
    { name = "proDream", email = "sushkoos@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.40.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "ruff (>=0.14.0,<0.20.0)",
    "pydantic[email] (>=2.12.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "poetry-core (>=2.2.1,<3.0.0)",
    "starlette-admin (>=0.15.1,<0.16.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "lkeep", from = "src"}]

[project.scripts]
app = "lkeep.main:start"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.ruff]
line-length = 120
indent-width = 4
